--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
   <div id="wrapper">
 
-    <h1 id="level-title">Press a Key to Start</h1>
+    <h1 id="level-title">Press any Key to Start or click de button</h1>
+    <butto class="myButton">Start Game</butto>
     <div class="container">
       <div lass="row">
         
